--- a/index.html
+++ b/index.html
@@ -19,8 +19,41 @@
     <title>HackMyCity</title>
 </head>
 <body>
-	
-
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<!-- This creates the "hamburger" -->
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>                        
+				</button>
+				<!-- Java logo from Java -->
+				<a class="navbar-brand" href="index.html"><img src="bcit.png" alt="Java is cool"/></a>
+				<!-- Logo on the Nav-Bar -->
+			</div>
+			
+			<!-- collapsable menu -->
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="map.html">Map</a></li>
+					<li><a href="currenttrip.html">Current Trip</a></li>
+					<li><a href="delay.html">Delay</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container-fluid">
+		<div class="jumbotron">
+			<br />
+			<img src="title.png" alt="Translink app" class="img-responsive" />      
+			<!--h6 class="visible-xs">the way.</h6>
+            <h5 class="visible-sm">da wai.</h5>
+            <h4 class="visible-md">gah wei</h4-->
+            <h3 class="visible-lg">derp.</h3>
+		</div> 
+	</div>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
