--- a/index.html
+++ b/index.html
@@ -4,21 +4,59 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="initial-scale=1, user-scalable=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./Style/stylesheet.css">
+    
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-
+	<style>
+		  /* Always set the map height explicitly to define the size of the div
+		   * element that contains the map. */
+		  #map {
+			width: 100%;
+			height: 400px;
+			background-color: grey;
+		  }
+    </style>
 
     <title>HackMyCity</title>
 </head>
 <body>
+	<div class = "container-fluid">
+	
+		<div class="TopBorder row align-items-center">
+			<div class="col-12">
+				HackMyCity
+			</div>
+		</div>
+		
+		
+		<div class="row">
+			<div class="col-4">
+				<div id="map"></div>
+				<script>
+				  function initMap() {
+					var uluru = {lat: -25.363, lng: 131.044};
+					var map = new google.maps.Map(document.getElementById('map'), {
+					  zoom: 4,
+					  center: uluru
+					});
+					var marker = new google.maps.Marker({
+					  position: uluru,
+					  map: map
+					});
+				  }
+				</script>
+				<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnRwkigwxOBpyKwEPlRwlvbGXIP-iS0DI&callback=initMap"
+				type="text/javascript"></script>
+			</div>
+		</div>
+	</div>
 	
 
   <!-- Optional JavaScript -->
