--- a/index.html
+++ b/index.html
@@ -45,13 +45,28 @@
 		</div>
 	</nav>
 	<div class="container-fluid">
-		<div class="jumbotron">
+		<div class="row">
+			<div class="col-8">
 			<br />
 			<img src="title.png" alt="Translink app" class="img-responsive" />      
-			<!--h6 class="visible-xs">the way.</h6>
-            <h5 class="visible-sm">da wai.</h5>
-            <h4 class="visible-md">gah wei</h4-->
-            <h3 class="visible-lg">derp.</h3>
+			<div id="map"></div>
+			<script>
+				function initMap() {
+					var newwest = {lat: 49.203472, lng: -122.912805};
+					var map = new google.maps.Map(document.getElementById('map'), {
+				  zoom: 17,
+				  center: newwest
+					});
+					var marker = new google.maps.Marker({
+				  position: newwest,
+				  map: map
+					});
+				}
+			</script>
+		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFnZlh2tZSTcf6E35RG8GBoKjdi4MzXic&callback=initMap">
+		</script>
+            </div>
 		</div> 
 	</div>
   <!-- Optional JavaScript -->
