--- a/index.html
+++ b/index.html
@@ -19,36 +19,17 @@
     <title>HackMyCity</title>
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<!-- This creates the "hamburger" -->
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>                        
-				</button>
-				<!-- Java logo from Java -->
-				<a class="navbar-brand" href="index.html"><img src="bcit.png" alt="Java is cool"/></a>
-				<!-- Logo on the Nav-Bar -->
-			</div>
-			
-			<!-- collapsable menu -->
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="map.html">Map</a></li>
-					<li><a href="currenttrip.html">Current Trip</a></li>
-					<li><a href="delay.html">Delay</a></li>
-				</ul>
+			<div class="row">
+				<div class="col-2">
+					<img src="logo.png" alt="Bike2Go logo"/>
+				</div>
 			</div>
 		</div>
-	</nav>
+	
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-8">
-			<br />
-			<img src="title.png" alt="Translink app" class="img-responsive" />      
+		<div class="row">	   
 			<div id="map"></div>
 			<script>
 				function initMap() {
